--- a/kaggle_nyra2019.ipynb
+++ b/kaggle_nyra2019.ipynb
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "dbf3c0ae",
+   "id": "8b2cf0bd",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "afbb590a",
+   "id": "ce7e97df",
    "metadata": {},
    "outputs": [
     {
@@ -839,13 +839,23 @@
     "fig.layout.updatemenus[0].buttons[0].args[1]['transition']['duration'] = 5\n",
     "fig.update_traces(marker = dict(symbol = \"circle-open\", size = 20))\n",
     "fig.update_layout(template = \"plotly_dark\", font = dict(family = \"PT Sans\", size = 12))\n",
-    "fig.show()"
+    "fig.show() #das"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "97ac08b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############한글깨짐"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189099f2",
+   "id": "754c6923",
    "metadata": {},
    "outputs": [],
    "source": []
